# april

./: .env  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
patches/: googlethis+1.7.1.patch
src/: App.module.scss  App.tsx  SettingsApp.module.scss  SettingsApp.tsx  main.tsx  settings.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  settings.rs
src-tauri/src/commands/: files.rs  python.rs  reminders.rs
src/@types/: April.ts  PanelInfo.ts
src/@types/commands/: reminders.ts
src/components/: AprilPanel.module.scss  AprilPanel.tsx  CardPanel.module.scss  CardPanel.tsx  CodeEvaluationPanel.module.scss  CodeEvaluationPanel.tsx  Markdown.module.scss  Markdown.tsx  Panel.module.scss  Panel.tsx  ScriptingStatusPanel.tsx  SpeechWave.tsx  StatusPanel.module.scss  StatusPanel.tsx
src/hooks/: useAudioQueue.ts  useStreamingData.ts
src/utils/: settings.ts  windowHeight.ts
