[package]
name = "april-client"
version = "0.0.1"
description = "April Client"
authors = ["themintchoco"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "http-request", "macos-private-api", "os-all", "path-all", "shell-open", "system-tray", "window-set-size", "window-start-dragging"] }
tauri-plugin-positioner = "1.0"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.27.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1.0"
window-shadows = "0.2"
version-compare = "0.1.1"
scopeguard = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.0.2", features = ["AppKit", "AppKit_NSMenu", "AppKit_NSWindow", "Foundation_NSPredicate", "Foundation_NSCalendar", "Foundation_NSDate", "Foundation_NSDateComponents", "EventKit_all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
